修正部分文字

--- a/ClassPlacement.htm
+++ b/ClassPlacement.htm
@@ -50,7 +50,7 @@
 					<li><i class="fa-li fa fa-info-circle" ></i>請注意，電腦彙整資料時，學生數量X志願序後，資料會達到上千筆，載入學生名單時會延遲一兩秒，放輕鬆等他算完即可，因為不論怎麼說都比你自己算好很多</li>
                     <li><i class="fa-li fa fa-github"></i>你也可以在GitHub上找到本程式的原始碼，或許有的時候會更新版本：<a href="https://github.com/kelunyang/Kelunyang-OfficeToolkit">https://github.com/kelunyang/Kelunyang-OfficeToolkit</a></li>
 				</ul>
-				<p style="text-align: right;">Designer: Kelunyang 2017 CC-BY-NC-SA</p>
+				<p style="text-align: right;">Designer: <a href="mailto:kelunyang@outlook.com">Kelunyang</a> 2017 CC-BY-NC-SA</p>
 				<p style="text-align: center"><button id="start">我看懂了！開始吧！</button></p>
 			</section>
             <section id="classconfig">
