調整部分文字

--- a/ClassPlacement.htm
+++ b/ClassPlacement.htm
@@ -101,7 +101,7 @@
 					<li id="classloadxml"><i class="fa fa-li fa-download" aria-hidden="true"></i>
                         <span>以下步驟其實電腦可以一次完成，但避免畫面鎖死太久，每按一步運算一次（如果資料過大時可能畫面還是會鎖死數秒，如該課已滿會標記紅色）</span>
                         <ol>
-                            <li><button id="banlistanalysis" type="button" disabled>第一步：載入禁止選課名單（沒有就跳過不要設定）</button></li><!-- 還剩這個部分 -->
+                            <li><button id="banlistanalysis" type="button" disabled>第一步：載入禁止選課名單（沒有就跳過不要設定）</button></li>
                             <li><button id="markanalysis" type="button" disabled>第二步：標記哪些課程有特殊設定</button></li>
                             <li><button id="limitanalysis" type="button" disabled>第三步：排除擋修和合併志願序</button></li>
                             <li><button id="placementanalysis" type="button" disabled>第四步：分發（每按一次分發一次）</button></li>
